--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ readme = "README.md"
 requires-python = ">=3.8"
 license = {text = "BSD-3-Clause"}
 authors = [
-    {name = "Mikhail Shashin", email = "mikhail.shashin@example.com"},
+    {name = "Mikhail Shashin"},
 ]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -36,9 +36,9 @@ dependencies = [
 ja3-extractor = "ja3_extractor:main"
 
 [project.urls]
-Homepage = "https://github.com/shashinma/rules"
-Repository = "https://github.com/shashinma/rules"
-Issues = "https://github.com/shashinma/rules/issues"
+Homepage = "https://github.com/shashinma/tls-fingerprint-extractor"
+Repository = "https://github.com/shashinma/tls-fingerprint-extractor"
+Issues = "https://github.com/shashinma/tls-fingerprint-extractor/issues"
 
 [tool.setuptools.packages.find]
 where = ["src"]
